# chorus

./: .gitignore  Boss CE-2 specifics.txt  CMakeLists.txt  ElectroSmash - Boss CE-2 Analysis.html  Notes for a chorus.txt  README.md  The chorus effect_ origin, and working of the Boss CE-2 _ Anasounds.html  chorusFunction.m  chorustest.m  cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
AP2Chorus/: CMakeLists.txt
AP2Chorus/resource/: editor.uidesc  myplugineditor.uidesc
AP2Chorus/source/: Buffer.h  Osc.h  cids.h  controller.cpp  controller.h  entry.cpp  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  processor.cpp  processor.h  version.h
Basic-Delay-Test/: Basic-Delay-Test.sln
Basic-Delay-Test/Basic-Delay-Test/: Basic-Delay-Test.cpp  Basic-Delay-Test.vcxproj  Basic-Delay-Test.vcxproj.filters
Basic-Delay-Test/Basic-Delay-Test/x64/Debug/: Basic-Delay-Test.exe.recipe  Basic-Delay-Test.ilk  vc143.idb
Basic-Delay-Test/Basic-Delay-Test/x64/Debug/Basic-Delay-Test.tlog/: Basic-Delay-Test.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
The chorus effect_ origin, and working of the Boss CE-2 _ Anasounds_files/: anchor.html  api.js.download  checkout.html  classic-reset.css  classic.js.download  cms-navigation.css  css  css(1)  css2  customizer.css  customizer.js.download  elements.css  flickr-api.js.download  grid.css  hotjar-2745414.js.download  js  jssocials.css  kr-payment-form.min.js.download  kr-trans-error.bundle.js.download  nm-js_composer.css  portfolio.css  portfolio.js.download  rest.js.download  shop.css  style.css
